<resources>
    <string name="app_name">FaceToFace</string>
    <string name="title_activity_map">Map</string>

    <string name="Topic">Topic</string>
    <string name="Interests">Interests</string>
    <string name="EditTopic">Fill in a topic</string>
    <string name="EditInterests">What interests do you have?</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAAZ6Zkptd6IjUzNRrec2e1Z5Fu9_dRamw</string>
    <string name="ListOfTopics">List of topics</string>
    <string name="deleteButton">-</string>
    <string name="sendButton">></string>
    <string name="CancelRequest">Cancel Request</string>
    <string name="Cancel">Cancel</string>
    <string name="Accept">Accept</string>
    <string name="SendRequest">Send Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
