<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <android.support.v7.widget.CardView android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/Topic"
                android:textColor="@color/colorAccent" />
            <TextView
                android:id="@+id/topicTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"

                android:paddingBottom="15dp"/>
            <View style="@style/Divider"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/Interests"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="15dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvUserMarker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:scrollbars="vertical" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_gravity="center"
                    android:id="@+id/SendRequestButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:textColor="@color/cardview_light_background"
                    android:text="@string/SendRequest"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>